Update texts on home page

--- a/src/i18n/_locales/cs/messages.json
+++ b/src/i18n/_locales/cs/messages.json
@@ -60,7 +60,7 @@
         "description": "References page - header of the first section"
     },
     "204c193b-6887-4e07-974e-e7134e58ab76": {
-        "message": "Film a Seriál",
+        "message": "Film a seriál",
         "description": "Header of the second paragraph on the home page"
     },
     "2174610a-a24a-4d57-8209-c989ea38e51f": {
@@ -68,7 +68,7 @@
         "description": "Q&A page - answer to question 5 - paragraph 4"
     },
     "2264b17d-0ea8-49c9-aec7-1cde77887917": {
-        "message": "registrační poplatek 2.000Kč je rozdělen na dvě části:",
+        "message": "registrační poplatek 2 000 Kč je rozdělen na dvě části:",
         "description": "Registrations page - oldest kids - the third line - part 1"
     },
     "23446130-8c22-4018-bb01-cdfe1215e140": {
@@ -200,7 +200,7 @@
         "description": "Registrations page - youngest kids - the first line"
     },
     "558d09fb-f707-46f6-a0d6-5f70d704440b": {
-        "message": "jednorázově 1.000 Kč v hotovosti u registrace a 1000 Kč se strhne až z 1. vypláceného honoráře",
+        "message": "jednorázově 1 000 Kč v hotovosti u registrace a 1 000 Kč se strhne až z 1. vypláceného honoráře",
         "description": "Registrations page - oldest kids - the third line - part 2"
     },
     "588ddae1-8b2e-4141-b776-4cd9dfbc4447": {
@@ -252,7 +252,7 @@
         "description": "References page - part two of the fourth section"
     },
     "661c230e-e660-4745-b5c0-9df24de636e3": {
-        "message": "Obsazujeme především hlavní a vedlejší mluvené i nemluvené herecké role, dabléry hl.herců, okrajově i kompars.",
+        "message": "Obsazujeme především hlavní a vedlejší mluvené i nemluvené herecké role, dabléry hl. herců, okrajově i kompars.",
         "description": "The second paragraph on the home page"
     },
     "66832bdf-0a9d-40b4-ad12-922591b87198": {
@@ -460,7 +460,7 @@
         "description": "Email Us page - the sub-header info text"
     },
     "b0fe1f36-cd5e-40ee-8941-3a9383cec031": {
-        "message": "Zaměřujeme se na český a slovenský dabing filmů, seriálů, reklam pro televizi, rádio i internet.",
+        "message": "Zaměřujeme se na dabing filmů, seriálů, reklam pro televizi, rádio i internet především v češtině, slovenštině a angličtině.",
         "description": "The third paragraph on the home page"
     },
     "b14db5d9-c99a-4b08-af69-7ab224854101": {
