Add fourth island to home page

--- a/src/i18n/_locales/cs/messages.json
+++ b/src/i18n/_locales/cs/messages.json
@@ -427,6 +427,10 @@
         "message": "Buďte prosím trpěliví a maximálně flexibilní, na nat.den si vždy raději blokujte celý den.",
         "description": "Q&A page - answer to question 6 - paragraph 5"
     },
+    "a14e6633-b9f5-42ef-993b-6ffbb54afe17": {
+        "message": "Herectví",
+        "description": "Header of the fourth paragraph on the home page"
+    },
     "a181adb2-79c0-429f-b9a9-d5275107f560": {
         "message": "registrujeme",
         "description": "Registrations page - middle kids - the first line - the first part"
@@ -654,6 +658,10 @@
     "f7b87daf-a144-4e73-b4fd-6342f1282136": {
         "message": "Naše dvorní fotografka specializující se na focení dětí, nastávajících maminek a rodinné foto.",
         "description": "About Us page - the first part of photographer's description"
+    },
+    "f99e756b-e4df-453f-b01e-1b8fb5194780": {
+        "message": "Každoročně pořádáme příměstský herecký tábor Filmák, který připravuje děti na situace před kamerou či na castingu.",
+        "description": "The fourth paragraph on the home page"
     },
     "f9c61891-0855-4878-9055-ab80a9e4512f": {
         "message": "Anatomie života, Cold feet, Černá sanitka, Černý pivo, Dáma a král, Druhá šance, DOC, Emanuel Moravec - Anatomie zrady, Ententyky, Guru, Hana, HPI, Hop nebo trop, Hvězdy nad hlavou, Král Šumavy, Krásno, Lynč, Něžné vlny, Marie Terezie 3, Matematika zločinu, Mordrparta, Národní házená, Návraty domů, Odznak Vysočina, Ohnivý kuře, Oktopus, Ordinace v řůžové zahradě, Ombudsman, Podezření, Polda, Policajtka, Policie Modrava, Pozadí událostí, Přijela pouť, Roseanne, Sestřičky, Stockholmský syndrom, Soukromé pasti, Svět pod hlavou, Šéfka, Škvrna, Tiger Daddy, Tátové na tahu, Topinka, Ulice, V peřině, VIP vraždy, Vyprávěj, Ženy v pokušení, Život je hra",
