Add main info to the top of the QandA page

--- a/src/i18n/_locales/cs/messages.json
+++ b/src/i18n/_locales/cs/messages.json
@@ -1,4 +1,8 @@
 {
+    "01c5afcf-9c02-4320-8a97-7f0d273c0fdd": {
+        "message": "Agentura Poppy casting je určena dětem od 6 měsíců do 15 let. Naším cílem je objevit talentované a zajímavé děti a poskytnout jim příležitost uplatnit se ve filmovém či reklamním prostředí.",
+        "description": "Q&A page - the main info at the top of the page"
+    },
     "022440e0-53f1-45ad-b334-59f2dfdb39df": {
         "message": "ozvěte se tedy prosím až kolem 4. roka dítěte",
         "description": "Registrations page - middle kids - the fourth line"
